--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     }
     /* The console container element */
     #console {
-      height: 960px;
+      height: 777px;
+      width: 100%;
       position:relative;
       background-color: black;
       border: 2px solid #CCC;
-      margin: 1 auto;
+      margin: 0 auto;
     }
     /* The inner console element. */
     .jqconsole {
@@ -59,7 +60,7 @@
     <script src="lib/jqconsole.js" type="text/javascript" charset="utf-8"></script>
     <script>
       $(function () {
-        var jqconsole = $('#console').jqconsole('Hi\n', '>>> ');
+        var jqconsole = $('#console').jqconsole('Hi welcome to shad\'s personal website\n', '>>> ');
         var startPrompt = function () {
           // Start the prompt with history enabled.
           jqconsole.Prompt(true, function (input) {
