--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     }
     /* The text color of the output. */
     .jqconsole-output {
-        color: white;
+        color: cyan;
     }
     </style>
   </head>
@@ -59,13 +59,24 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="lib/jqconsole.js" type="text/javascript" charset="utf-8"></script>
     <script>
+    var h = window.innerHeight,
+    portfolio = {},
+    hc=function(s){var h=0;for(var i in s){h=((h<<5)-h)+s.charCodeAt(i)}return h};
+    var output = function(input) {
+        switch(input){
+            case 'hi' : return 'hi';break;
+            case 'help' : return 'what help do you need';break;
+            default : return 'did not get you';
+        }
+    }
+	$('#console').css('height',h);	
       $(function () {
         var jqconsole = $('#console').jqconsole('Hi welcome to shad\'s personal website\n', '>>> ');
         var startPrompt = function () {
           // Start the prompt with history enabled.
           jqconsole.Prompt(true, function (input) {
             // Output input with the class jqconsole-output.
-            jqconsole.Write(input + '\n', 'jqconsole-output');
+            jqconsole.Write(output(input) + '\n', 'jqconsole-output');
             // Restart the prompt.
             startPrompt();
           });
