--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         .jqconsole-output {
             color: ghostwhite;
         }
+        .jqconsole-prompt-text{
+            color: white;
+        }
         
         @-webkit-keyframes blinker {
             from {
